# cuRSB

./: .gitignore  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  blas_sparse.h  ch2icfb  ch2icfb.c  configure  configure.ac  librsb-config.in  librsb_base.la  librsb_base_la-rsb_clone.lo  librsb_base_la-rsb_coo.lo  librsb_base_la-rsb_csr2coo.lo  librsb_base_la-rsb_rec2coo.lo  librsb_base_la-rsb_spgemm.lo  librsb_base_la-rsb_srtp.lo  librsb_base_la-rsb_user.lo  librsb_nounroll.la  librsb_nounroll_la-rsb_bench.lo  librsb_nounroll_la-rsb_krnl.lo  librsb_nounroll_la-rsb_krnl_bcoo_spmv_u.lo  librsb_nounroll_la-rsb_krnl_bcss_misc_u.lo  librsb_nounroll_la-rsb_krnl_lb.lo  librsb_nounroll_la-rsb_stropts.lo  librsb_nounroll_la-rsb_util.lo  ot-spmv_uaua.c  psb_mvsv_tester.f90  rsb-config.h.in  rsb.F90  rsb_clone.c  rsb_clone.h  rsb_common.h  rsb_config.m4  rsb_config.m4.in  rsb_coo2rec.h  rsb_coo_check.h  (+103 more)
.libs/: rsbench
bench/: Makefile.am  Makefile.in
blas_sparse/: Makefile.am  blas_enum.F90  blas_sparse_proto.h
doc/: Doxyfile  references.bib  report.tex
doc/html/: annotated.html  blas__sparse_8h.html  classes.html  files.html  fortran_8F90.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  globals_func_r.html  globals_r.html  group__rsb__doc__examples.html  group__rsb__doc__rsb.html  interfaceblas__sparse_1_1uscr__insert__col.html  interfaceblas__sparse_1_1uscr__insert__entries.html  interfaceblas__sparse_1_1uscr__insert__entry.html  interfaceblas__sparse_1_1usmm.html  interfacersb_1_1rsb__file__mtx__save.html  interfacersb_1_1rsb__file__vec__save.html  interfacersb_1_1rsb__lib__exit.html  interfacersb_1_1rsb__lib__get__opt.html  interfacersb_1_1rsb__lib__set__opt__str.html  interfacersb_1_1rsb__mtx__alloc__from__csc__const.html  interfacersb_1_1rsb__mtx__alloc__from__csr__inplace.html  interfacersb_1_1rsb__mtx__get__rows__sparse.html  interfacersb_1_1rsb__mtx__switch__to__coo.html  interfacersb_1_1rsb__mtx__switch__to__csr.html  interfacersb_1_1rsb__perror.html  interfacersb_1_1rsb__psblas__trans__to__rsb__trans.html  interfacersb_1_1rsb__spmsp__to__dense.html  interfacersb_1_1rsb__spmv.html  interfacersb_1_1rsb__sppsp.html  interfacersb_1_1rsb__spsv.html  interfacersb_1_1rsb__time.html  interfacersb_1_1rsb__tune__spsm.html  menudata.js  modules.html  namespacemembers_s.html  namespacemembers_vars.html  namespacemembers_z.html  (+6 more)
doc/man/: librsb-config.1  rsbench.1
doc/man/man3/: RsbMatrix.3  rsb-examples.3  rsb-spblas.h.3  rsb.h.3  rsb.hpp.3
examples/: Makefile.am  Makefile.in  fortran  hello-spblas.c  io-spblas  make.sh  power  transpose  transpose.c  vf.mtx
examples/.libs/: autotune  hello-spblas  transpose
librsb/: Makefile  Makefile.in  README  README.md  aclocal.m4  autogen.sh  blas_sparse.mod  ch2icfb  config.status  configure  configure.ac  do_unroll.m4  librsb-config  librsb.la  librsb.pc.in  librsb_base.la  librsb_base_la-rsb_asm.lo  librsb_base_la-rsb_bio.lo  librsb_base_la-rsb_blas_stuff.lo  librsb_base_la-rsb_coo2rec.lo  librsb_base_la-rsb_coo_check.lo  librsb_base_la-rsb_coo_symm.lo  librsb_base_la-rsb_cpmv.lo  librsb_base_la-rsb_csr.lo  librsb_base_la-rsb_do.lo  librsb_base_la-rsb_dump.lo  librsb_base_la-rsb_eps.lo  librsb_base_la-rsb_err.lo  librsb_base_la-rsb_fpb.lo  librsb_base_la-rsb_garbage.lo  librsb_base_la-rsb_gen.lo  librsb_base_la-rsb_get.lo  librsb_base_la-rsb_idx.lo  librsb_base_la-rsb_init.lo  librsb_base_la-rsb_internals.lo  librsb_base_la-rsb_is.lo  librsb_base_la-rsb_limiter.lo  librsb_base_la-rsb_lock.lo  librsb_base_la-rsb_mbw.lo  librsb_base_la-rsb_mio.lo  (+162 more)
librsb/.libs/: librsb.la  librsb.lai  librsb.so.0  librsb_base.la  librsb_nounroll.la  librsb_spblas.la  rsbench
librsb/autom4te.cache/: output.0  requests  traces.0  traces.1
librsb/bench/: Makefile  Makefile.in
librsb/blas_sparse/: Makefile  Makefile.in  blas_enum.h
librsb/doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in
librsb/doc/html/: deprecated.html  formula.repository  functions.html  functions_vars.html  globals_enum.html  globals_eval.html  globals_eval_r.html  globals_type.html  group__rsb__doc__examples.html  group__rsb__doc__rsb.html  group__rsb__doc__sparse__blas.html  index.html  interfaceblas__sparse_1_1rsb__blas__get__mtx.html  interfaceblas__sparse_1_1uscr__insert__block.html  interfaceblas__sparse_1_1uscr__insert__clique.html  interfaceblas__sparse_1_1uscr__insert__row.html  interfaceblas__sparse_1_1usmv.html  interfaceblas__sparse_1_1ussm.html  interfaceblas__sparse_1_1ussv.html  interfacersb_1_1rsb__coo__sort.html  interfacersb_1_1rsb__file__mtx__get__dims.html  interfacersb_1_1rsb__file__mtx__load.html  interfacersb_1_1rsb__file__mtx__rndr.html  interfacersb_1_1rsb__file__vec__load.html  interfacersb_1_1rsb__lib__init.html  interfacersb_1_1rsb__lib__reinit.html  (+42 more)
librsb/examples/: Makefile  Makefile.in  autotune  autotune.c  backsolve  benchex.sh  cplusplus  fortran  fortran.F90  fortran_rsb_fi  fortran_rsb_fi.F90  hello  hello-spblas  hello.c  hello_cuda.cu  io-spblas  io-spblas.c  make.sh.in  pd.eps  power  power.c  rsb_cuda_bench.cu  snippets  transpose
librsb/librsbpp/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  librsbpp.la  rsbck.hpp  rsbpp_coo.hpp  rsbpp_coo.lo  rsbpp_csr.hpp  rsbpp_csr.lo  test.sh
librsb/m4/: Makefile  Makefile.in
librsb/rsblib/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  rgt  rgt_ne  rgt_rv  rsb
librsb/rsbtest/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  rsbtest
librsb/scripts/: Makefile  Makefile.am  Makefile.in  build_optimized.sh  devtests.sh  dist_serial.sh  doc-tests.sh  gcov.sh  gcov_run.sh  gprof.sh  linux-sys-cache.sh  matrices_get.sh  readme-tests.sh  static-libs.sh  test_misc.sh  versions.sh
librsbpp/: Makefile.in  configure.ac
m4/: Makefile.in
rsblib/: Makefile.am  Makefile.in
scripts/: Makefile.in  configure_for_debug.sh  devtests.sh  hinfo.sh  rsb_h_to_rsb_fi.sh  test.sh
src/: example.c  matrix_conversions.c
(+52 files in other folders)
